# BOILERPLATE__terraform-aws-ecs-codepipeline

./: .gitignore  .terraform.lock.hcl  README.md  STEPS.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
app_code/: .env  Cargo.toml  README.md  STEPS.md  appspec.yaml  buildspec.yml  dev.dockerfile  docker-compose.dev.yml  docker-compose.test.yml  example.appspec.yaml  example.buildspec.yml  example.taskdef.json  migration.dockerfile  taskdef.json
app_code/migrations/2021-12-12-231524_tests/: down.sql  up.sql
app_code/src/: api.rs  app_middleware.rs  db.rs  error.rs  lib.rs  main.rs  schema.rs
app_code/src/api/: app.rs  path.rs  tests.rs
app_code/src/api/tests/: get.rs
app_code/src/app_middleware/: csrf.rs  sample.rs
app_code/src/db/: connection.rs  pagination.rs  tests.rs
app_code/src/models/: tests.rs
app_code/src/serialization/: tests.rs
app_code/swagger/: swagger.yaml
draw.io/: architecture.drawio
modules/ALB/: main.tf  outputs.tf  variables.tf
modules/CI_CD/: main.tf  variables.tf
modules/DB/: main.tf  outputs.tf  variables.tf
modules/ECS/: main.tf  outputs.tf  variables.tf
modules/ECS/data/: ecr_lifecycle_policy.json
modules/IAM/: main.tf  variables.tf
modules/Networking/: main.tf  outputs.tf  variables.tf
modules/Redis/: main.tf  outputs.tf  variables.tf
