[package]
name = "boilerplate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-redis = "0.9.2"
actix-session = "0.4.1"
actix-web = "3.3.2"
derive_more = "0.99.16"
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
time = "0.2.27"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "serde_json", "chrono", "uuidv07"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-service = "1"
futures = "0.3.15"
